Working on mobile library

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -46,6 +46,7 @@
 @import "cmps/StationPreview";
 @import "cmps/StationList";
 @import "cmps/Library";
+@import "cmps/LibraryMobile";
 @import "cmps/ImgUploader";
 @import "cmps/GenrePreview";
 @import "cmps/GenreList";
