--- a/src/assets/styles/cmps/NavBar.scss
+++ b/src/assets/styles/cmps/NavBar.scss
@@ -80,9 +80,9 @@
         }
       }
 
-      .library-container {
-        display: flex;
-      }
+      // .library-container {
+      //   display: flex;
+      // }
 
       .nav-options {
         display: flex;
@@ -101,6 +101,7 @@
 
       .library-container {
 
+        display: flex;
         width: 100%;
         height: 100%;
         overflow: hidden;
