--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -14,7 +14,43 @@
   position: relative;
 
   margin-right: 1000px;
-  margin-left: 10px;
+  &.full-screen-player {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    width: 100%;
+    height: 100vh;
+    max-height: unset;
+    min-height: unset;
+    margin-right: unset;
+
+    .full-player {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      padding: 0;
+      gap: em(10px);
+
+      .minimal-song {
+        display: flex;
+        flex-direction: column;
+        .song-img {
+          width: em(300px);
+          height: em(300px);
+          max-width: unset;
+          max-height: unset;
+          border-radius: 10px;
+          margin: 0 auto;
+        }
+      }
+      .player {
+      }
+    }
+  }
 }
 
 @include for-normal-layout {
