--- a/src/assets/styles/views/StationPage.scss
+++ b/src/assets/styles/views/StationPage.scss
@@ -6,7 +6,7 @@
   .app-header {
     padding: 1em;
   }
-  scrollbar-color: rgba(85, 85, 85, 0.5) transparent;
+  //scrollbar-color: rgba(85, 85, 85, 0.5) transparent;
 }
 
 .station-page {
