fix mobile size vh/vw replaced with svw/svh

--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -22,7 +22,7 @@
     right: 0;
     z-index: 3;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     max-height: unset;
     min-height: unset;
     margin-right: unset;
