--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  max-height: 100vh;
+  max-height: 100svh;
 
   * {
     * {
@@ -16,7 +16,6 @@
       }
     }
   }
-  
 
   .mobile-footer {
     position: sticky;
@@ -45,7 +44,7 @@
   .page-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100svh;
     padding: em(10px);
   }
 
@@ -95,7 +94,7 @@
     overflow-y: auto;
     border-radius: 8px;
     background-color: $sec-bg-clr;
-    //min-width: 60vw;
+    //min-width: 60svw;
 
     .main-container-bg {
       transition: background-image 2s ease;
@@ -124,6 +123,6 @@
   .side-pop-up {
     display: flex;
     flex-direction: column;
-    max-width: 30vw;
+    max-width: 30svw;
   }
 }
