--- a/src/assets/styles/cmps/Loader.scss
+++ b/src/assets/styles/cmps/Loader.scss
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: center;
   background-color: #121212; // Dark background color
-  width: 100vw;
-  height: 100vh;
+  width: 100svw;
+  height: 100svh;
   top: 0;
   left: 0;
   z-index: 1000;
